# mini_pupper_web_controller

./: .gitignore  README.md  prepare_sd.py  setup.sh
joystick_sim/: ChangeLog  LICENSE  MANIFEST.in  setup.cfg
joystick_sim/joystick_sim/: joystick.py
joystick_sim/tests/: .coverage  test_basic_functions.py  test_sequences.py
joystick_sim/tests/expected_results/: log_1  log_10  log_11  log_2  log_3  log_4  log_5  log_6  log_7  log_8  log_9  seq_log_1  seq_log_2
tests/: README.txt  pt2.py  pt3.py  pt4.py  run_all_tests.sh  test_activate.txt  test_all.sh  test_cancel_shutdown.txt  test_jump.txt  test_pitch_max.txt  test_pitch_mid.txt  test_pt.txt  test_pushups.txt  test_roll.txt  test_shutdown.txt  test_toggle_trot.txt  test_walk_square_fast.txt  test_walk_square_slow.txt  test_yaw_max.txt  test_yaw_mid.txt  toggle_activate.txt  toggle_trot.txt
webserver/: install.sh  restore.sh  web-controller.service
webserver/backend/: requirements.txt  setup.cfg
webserver/backend/backend/: app.py  sim.py  test_sim.py
webserver/backend/backend/controller/: controller.py
webserver/backend/backend/settings/: set_all.py  shell.py  wifi.py
webserver/backend/backend/static/: index.html  main.10dcc166e91a0168.js  main.4ceda388f5b24536.js  main.f6fe7524883d3a6d.js  main.f9e5871de23291f4.js  polyfills.f688cab511550a83.js  runtime.eee403c78b7de6be.js
webserver/frontend/mini_pupper/: README.md  angular.json  build.sh  karma.conf.js  package-lock.json  package.json
webserver/frontend/mini_pupper/src/: index.html
webserver/frontend/mini_pupper/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
webserver/frontend/minipupper/: build.sh
webserver/frontend/minipupper/src/app/: app-routing.module.ts
(+21 files in other folders)
