[metadata]
name             = joystick_sim
version          = 0.1.0
summary          = This is joystick_sim project
description-file = README.rst
author           = Horst Dumcke
home-page        = https://github.com/hdumcke

[files]
packages         = joystick_sim

[global]
setup-hooks      = pbr.hooks.setup_hook

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[wheel]
universal       = 1
