[metadata]
name             = backend
summary          = This is backend project
description_file = README.rst
author           = Horst Dumcke
home-page        = https://github.com/hdumcke

[files]
packages         = backend

[global]
setup-hooks      = pbr.hooks.setup_hook

[entry_points]
console_scripts  =
    web-controller     = backend.app:main

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
